syntax = "proto2";
import "WireFormats.proto";


option java_package = "org.apache.pekko.remote";
option optimize_for = SPEED;


/************************************************
 *   Kamon-specific additions to the protocol
 ************************************************/

message AckAndContextAwareEnvelopeContainer {
    optional AcknowledgementInfo ack = 1;
    optional ContextAwareRemoteEnvelope envelope = 2;
}

message ContextAwareRemoteEnvelope {
    required ActorRefData recipient = 1;
    required SerializedMessage message = 2;
    optional ActorRefData sender = 4;
    optional fixed64 seq = 5;

    optional RemoteContext traceContext = 15;
}

message RemoteContext {
    required bytes context = 1;
}

